--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -18,6 +18,7 @@
         </section>
     </div><!-- header -->
 
+
     <div class="content-block" id="blog">
         <div class="container blog-sec">
             <header class="block-heading cleafix">
@@ -31,6 +32,31 @@
             <section class="block-body">
 
                 {% for trick in tricks %}
+                    <div class="modal" id="delete-{{ trick.id }}">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Suppression</h4>
+                                </div>
+                                <div class="modal-body">
+                                    La suppresion d'un article étant définitif, veuillez être sur de votre action.
+                                </div>
+                                <div class="modal-footer">
+                                    <form action="{{ path('trick_delete', {'id': trick.id}) }}" method="post">
+                                        <input type="hidden" name="token" value="{{ csrf_token('delete-item') }}"/>
+                                        <a href="{{ path('tricks_show', {'id': trick.id}) }}" class="btn btn-default">
+                                            <i class="glyphicon glyphicon-chevron-left"></i>
+                                            Voir la figure
+                                        </a>
+                                        {# Ici j'ai écrit le bouton de soumission à la main #}
+                                        <input type="submit" value="Supprimer" class="btn btn-danger"/>
+
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
 
                     <div class="col-lg-3 card ">
                         <img src="{{ asset('assets/images/header-bg.jpg') }}">
@@ -45,7 +71,7 @@
                                 <a href="{{ path('trick_edit', {'id': trick.id}) }}">
                                     <button class="btn"><i class="fa fa-pencil"></i></button>
                                 </a>
-                                <a href="">
+                                <a href="" data-toggle="modal" data-target="#delete-{{ trick.id }}">
                                     <button class="btn"><i class="fa fa-trash"></i></button>
                                 </a>
 
