--- a/app/Resources/views/default/new.html.twig
+++ b/app/Resources/views/default/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'without.html.twig' %}
 
 {% block body %}
     <div class="content-block">
@@ -6,7 +6,7 @@
 
         <h1>Ajout d'un tricks</h1>
         {{ form_start(form) }}
-        {{ form_row(form.title, {'attr': {'placeholder': "Titre du tricks"}}) }}
+        {{ form_row(form.title, {'attr': {'placeholder': "Titre du  tricks"}}) }}
         {{ form_row(form.slug, {'attr': {'placeholder': "tittre-format-url"}}) }}
         {{ form_row(form.category) }}
         {{ form_row(form.content, {'attr': {'placeholder': "Description du tricks"}}) }}
@@ -26,7 +26,7 @@
 
         // setup an "add a tag" link
 
-        jQuery(document).ready(function () {
+        $(document).ready(function () {
             var $addTagButton = jQuery('<button type="button" class="add_image_link">Ajouter une image</button>');
             var $collectionHolder = jQuery('#appbundle_trick_images');
             // Get the ul that holds the collection of tags
