--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -28,9 +28,8 @@ Text Domain: flusk
 * -----------------------------------------------------------------------------
 */
 
-
-/* ///////////////////////////////////////////////////////////////////// 
-//  01 - Global 
+/* /////////////////////////////////////////////////////////////////////
+//  01 - Global
 /////////////////////////////////////////////////////////////////////*/
 
 * {outline: none !important;}
@@ -49,7 +48,7 @@ html {
 }
 
 body {
-  color: #6a6a6a; 
+    color: #6a6a6a;
   background: #f1f0f0;
 }
 
@@ -65,7 +64,7 @@ a {
   outline: none;
 }
 
-a{  
+a {
   color: #4da7ca;
   -o-transition: all .4s;
   -ms-transition: all .4s;
@@ -75,12 +74,11 @@ a{
 }
 
 a:hover {
-  color: #4290ae; 
+    color: #4290ae;
 }
 
-
-h1, h2, h3, h4, h5, h6{   
-  margin: 0 0 15px 0; 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0 0 15px 0;
   color: #3A4F52;
   font-family: 'Raleway';
 }
@@ -98,11 +96,11 @@ h1, h2, h3, h4, h5, h6{
     border: 1px solid white;
     color: white;
     background: transparent;
-    
+
 }
 .btn.btn-o-white:hover {
     background: white !important;
-    color: #6a6a6a; 
+    color: #6a6a6a;
 }
 
 .title-page {
@@ -115,7 +113,7 @@ p.main-header {
   font-weight: 500;
 }
 p.main-header:after {
-  content: " ";   
+    content: " ";
   font-size: 27px;
   font-family: 'Raleway';
   font-weight: 500;
@@ -139,8 +137,6 @@ li{
 /*////////////////////////////////////////////////////////////////////////
 //  02 - Header
 ///////////////////////////////////////////////////////////////////////*/
- 
-    
 
 header.top-header {
   position: fixed;
@@ -152,6 +148,7 @@ header.top-header {
  transition: all .6s;
 }
 .shows .navbar-default {
+
   /* background-color: #f8f8f8; */
   /* border-color: #e7e7e7; */
   margin-bottom: 10px;
@@ -164,7 +161,7 @@ header.top-header {
 }
 .shows h1.logo {
   margin-top: 0px;
-  color: white;
+    color: dark;
 }
 
 h1.logo {
@@ -172,8 +169,9 @@ h1.logo {
   color: white;
   display: inline-flex;
 }
-#header{  
-  position: relative;     
+
+#header {
+    position: relative;
   text-align: center;
   padding: 0 !important;
 }
@@ -192,8 +190,8 @@ h1.logo {
   -o-transition: all .5s;
   -ms-transition: all .5s;
   -moz-transition: all .5s;
-  -webkit-transition: all .5s;  
-  transition: all .5s;    
+    -webkit-transition: all .5s;
+    transition: all .5s;
 }
 #header .top.solid {
     background: #475B6F;
@@ -435,8 +433,7 @@ h1.logo {
   padding: 92px 0 80px;
 }
 
-
-@media (min-width: 320px) and (max-width: 1024px) { 
+@media (min-width: 320px) and (max-width: 1024px) {
       .about-us {
       background: white;
       padding: 50px 0;
@@ -457,7 +454,7 @@ i.aboutus-icon {
   width: 140px;
   height: 140px;
   line-height: 136px;
-  vertical-align: middle; 
+    vertical-align: middle;
   text-align: center;
   color: rgb(106, 106, 106);
 }
@@ -587,15 +584,15 @@ h2.footer-block {
 }
 
 :-moz-placeholder { /* Firefox 18- */
-   color: #969595 !important;  
+    color: #969595 !important;
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
-   color: #969595 !important; 
+    color: #969595 !important;
 }
 
-:-ms-input-placeholder {  
-   color: #969595 !important;  
+:-ms-input-placeholder {
+    color: #969595 !important;
 }
 .footer-bottom {
   padding: 37px 0 30px;
@@ -686,4 +683,62 @@ h2.footer-block {
 }
 button.navbar-toggle.collapsed {
   margin-top: 40px;
+}
+
+.card {
+    margin-bottom: 1em;
+    min-height: 18em;
+}
+
+.card img {
+    margin-top: 1em;
+}
+
+.card .row h4 {
+    margin-top: 1em;
+
+}
+
+.card .row i {
+    font-size: 18px;
+    margin-top: 1em;
+
+}
+
+.spacer {
+    margin-bottom: 10px;
+}
+
+.thumbnail-comment {
+    padding: 0px;
+}
+
+.panel {
+    position: relative;
+}
+
+.panel > .panel-heading:after, .panel > .panel-heading:before {
+    position: absolute;
+    top: 11px;
+    left: -16px;
+    right: 100%;
+    width: 0;
+    height: 0;
+    display: block;
+    content: " ";
+    border-color: transparent;
+    border-style: solid solid outset;
+    pointer-events: none;
+}
+
+.panel > .panel-heading:after {
+    border-width: 7px;
+    border-right-color: #f7f7f7;
+    margin-top: 1px;
+    margin-left: 2px;
+}
+
+.panel > .panel-heading:before {
+    border-right-color: #ddd;
+    border-width: 8px;
 }
