Multiple file are edit for add one or multiple image in a trick. Little Css add for form Ajax add in home page for display trick 4 by 4 . Edit tricks with multiple image work with JS.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -146,8 +146,7 @@
                             </p>
                             <li class="address-sub"><i class="fa fa-envelope-o"></i>E-mail</li>
                             <p>
-                                <a href="mailto:info@themewagon.com">info@.com</a><br>
-                                <a href="http://www.themewagon.com/">http://foxmulder.odns.fr/</a>
+                                <a href="https://johanberg.fr/">https://johanberg.fr//</a>
                             </p>
 
 
@@ -160,6 +159,7 @@
                             <a href="#"><i class="fa fa-google-plus"></i></a>
                             <a href="#"><i class="fa fa-skype"></i></a>
                         </div>
+                        0
 
                     </div>
                 </div>
@@ -168,7 +168,7 @@
         <div class="content-block footer-bottom" id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-6">&copy; Copyright <a href="http://www.foxmulder.odns.fr" target="_blink">Johan B.
+                    <div class="col-xs-6">&copy; Copyright <a href="https://johanberg.fr/" target="_blink">Johan B.
                     </div>
                 </div>
             </div>
