--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -191,12 +191,12 @@
     <div class="inputGroup inputGroup1">
         <label for="loginEmail" id="loginEmailLabel">Email</label>
         <input type="email" required name="_username" id="loginEmail" maxlength="254"/>
-        <p class="helper helper1">email@domain.com</p>
+        <p class="helper helper1">Email</p>
         </div>
     <div class="inputGroup inputGroup2">
-        <label for="loginPassword" id="loginPasswordLabel">Password</label>
+        <label for="loginPassword" id="loginPasswordLabel">Mot de passe</label>
         <input type="password" required name="_password" id="loginPassword"/>
-        <label id="showPasswordToggle" for="showPasswordCheck">Show
+        <label id="showPasswordToggle" for="showPasswordCheck">Voir
             <input id="showPasswordCheck" type="checkbox"/>
             <div class="indicator"></div>
         </label>
