--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -146,8 +146,9 @@
                             </p>
                             <li class="address-sub"><i class="fa fa-envelope-o"></i>E-mail</li>
                             <p>
-                                <a href="mailto:info@themewagon.com">info@.com</a><br>
-                                <a href="http://www.themewagon.com/">http://foxmulder.odns.fr/</a>
+
+                                <a href="https://johanberg.fr/">https://johanberg.fr//</a>
+
                             </p>
 
 
@@ -161,6 +162,7 @@
                             <a href="#"><i class="fa fa-skype"></i></a>
                         </div>
 
+
                     </div>
                 </div>
             </div>
@@ -168,7 +170,9 @@
         <div class="content-block footer-bottom" id="footer">
             <div class="container">
                 <div class="row">
+
                     <div class="col-xs-6">&copy; Copyright <a href="http://www.foxmulder.odns.fr" target="_blink">Johan B.
+
                     </div>
                 </div>
             </div>
