--- a/app/Resources/views/default/registration.html.twig
+++ b/app/Resources/views/default/registration.html.twig
@@ -1,22 +1,45 @@
 {% extends 'without.html.twig' %}
 
+{% block header %}
+    {% include 'includes/header.html.twig' %}
+{% endblock %}
+
+
 {% block body %}
 
-    <h1>Inscription</h1>
-
-    {{  form_start(form) }}
-    {{ form_row(form.username, {'label': 'Nom d\'utilisateur', 'attr':
-        {'placeholder': 'Nom d\'utilisateur...'}}) }}
-    {{ form_row(form.email, {'label': 'Adresse email', 'attr':
-        {'placeholder': 'Adresse email'}}) }}
-    {{ form_row(form.password, {'label': 'Mot de passe', 'attr':
-        {'placeholder': 'mot de passe !'}}) }}
-    {{ form_row(form.confirm_password, {'label': 'Confirmation du mot de passe', 'attr':
-        {'placeholder': 'Répétez votre mot de passe'}}) }}
-        <button type="submit" class="btn btn-success"> S'inscrire</button>
-
-    {{ form_end(form) }}
+    <br/>
+    </br>
+    </br>
+    </br>
+    </br>
 
 
-    <p><a href="{{ path('security_login') }}"> Déjà un compte?</a></p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h1>Inscription</h1>
+
+                <div class="box">
+                    {{ form_start(form) }}
+                    {{ form_row(form.username, {'label': 'Nom d\'utilisateur', 'attr':
+                        {'placeholder': 'Nom d\'utilisateur...'}}) }}
+                    {{ form_row(form.email, {'label': 'Adresse email', 'attr':
+                        {'placeholder': 'Adresse email'}}) }}
+                    {{ form_row(form.password, {'label': 'Mot de passe', 'attr':
+                        {'placeholder': 'mot de passe !'}}) }}
+                    {{ form_row(form.confirm_password, {'label': 'Confirmation du mot de passe', 'attr':
+                        {'placeholder': 'Répétez votre mot de passe'}}) }}
+                    <center>
+                        <button type="submit" class="btn btn-success"> S'inscrire</button>
+                    </center>
+                    {{ form_end(form) }}
+                    <p><a href="{{ path('security_login') }}"> Déjà un compte?</a></p>
+
+                </div>
+                </br>
+                </br>
+                </br>
+            </div>
+        </div>
+    </div>
 {% endblock %}
