--- a/app/Resources/views/default/tricks.html.twig
+++ b/app/Resources/views/default/tricks.html.twig
@@ -97,14 +97,23 @@
                             {% for image in trick.images %}
                                 <div class="item {{ (loop.first)? "active":"" }}">
 
+                                    <div class="col-md-3">
+                                        <iframe width="100%"
+                                        <iframe width="100%" height="100%" src="{{ trick.video }}" frameborder="0"
+                                                allowfullscreen>
+                                            frameborder="0" allowfullscreen>
+                                        </iframe>
+                                    </div>
 
                                     <div class="col-md-3 col-lg-3 col-sm-3">
                                         <a class="thumbnail" style="max-height: 400px" href="#" data-image-id=""
                                            data-toggle="modal" data-title=""
-                                           data-image="{{ asset('uploads/image/'~ image.file) }}"
+
+                                           data-image="{{ asset(''~ image.webPath) }}"
                                            data-target="#image-gallery">
                                             <img class="img-thumbnail"
-                                                 src="{{ asset('uploads/image/'~ image.file) }}"
+                                                 src="{{ asset(''~ image.webPath) }}"
+
                                                  alt="Another alt text ( sa marche pas )">
 
                                         </a>
