--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -171,7 +171,7 @@
             <div class="container">
                 <div class="row">
 
-                    <div class="col-xs-6">&copy; Copyright <a href="http://www.foxmulder.odns.fr" target="_blink">Johan B.
+                    <div class="col-xs-6">&copy; Copyright <a href="https://johanberg.fr/" target="_blink">Johan B.
 
                     </div>
                 </div>
