--- a/app/Resources/views/default/registration.html.twig
+++ b/app/Resources/views/default/registration.html.twig
@@ -5,6 +5,11 @@
 {% endblock %}
 
 
+{% block header %}
+    {% include 'includes/header.html.twig' %}
+{% endblock %}
+
+
 {% block body %}
 
     <br/>
@@ -42,4 +47,5 @@
             </div>
         </div>
     </div>
+
 {% endblock %}
