--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -207,7 +207,9 @@
         {% if error %}
 
             <div class="alert alert-danger" role="alert">
-                Vos informations sont incorrect!!
+
+                {{ error.message|trans }}
+
             </div>
 
         {% endif %}
