edit login view for reset password and edit the view in email register .

--- a/app/Resources/views/emails/verif.html.twig
+++ b/app/Resources/views/emails/verif.html.twig
@@ -216,10 +216,10 @@
                                             </tr>
                                             <tr>
                                                 <td valign="top" style="padding-bottom:20px; background-color:#ffffff;">
-                                                    <b>Hey {{ user.username }}, merci pour votre inscription!</b><br>
-                                                    Nous sommes heureux de vous avoir dans notre communauté. Pour
-                                                    accéder à votre compte merci de renseigner le code ci-dessous en
-                                                    cliquant sur le bouton "Activer mon compte"
+                                                    <b>Bonjour {{ user.username }}, merci pour votre
+                                                        inscription!</b><br>
+                                                    Merci de votre inscription, pour activer votre compte,
+                                                    cliquez sur le bouton "Activer mon compte" .
 
 
                                                 </td>
@@ -238,7 +238,7 @@
                                                                             stroke="f" fillcolor="#008000">
                                                                         <w:anchorlock/>
                                                                         <center>
-                                                                            <a href="{{ url('app_homepage') }}"
+                                                                            <a href="{{ url('index') }}"
                                                                                style="background-color:#008000;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;">Activer mon compte</a>
                                                                             <!--[if mso]>
                                                                             </center>
@@ -256,8 +256,7 @@
                                             </tr>
                                             <tr>
                                                 <td style="padding-top:20px;background-color:#ffffff;">
-                                                    Merci,<br>
-                                                    L'équipe Snowtricks
+                                                    Merci
                                                 </td>
                                             </tr>
                                         </table>
@@ -266,7 +265,6 @@
                                 <tr>
                                     <td valign="top" class="footer-cell">
                                         Snowtricks<br>
-                                        Dev by Lucas.
                                     </td>
                                 </tr>
                             </table>
