--- a/app/Resources/views/default/reset_password.html.twig
+++ b/app/Resources/views/default/reset_password.html.twig
@@ -17,14 +17,13 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h1>Réinitialiser votre mot de passe</h1>
-                <p>
-                    vous recevrez un email après validation de ce formulaire.
-                </p>
 
                 <div class="box">
                     {{ form_start(form) }}
-                    {{ form_row(form.email, {'label': 'Adresse email liée à votre compte', 'attr':
-                        {'placeholder': 'Adresse email'}}) }}
+                    {{ form_row(form.password, {'label': 'Nouveau mot de passe', 'attr':
+                        {'placeholder': 'Entrer votre nouveau mot de passe'}}) }}
+                    {{ form_row(form.confirm_password, {'label': 'Confirmer votre mot de passe', 'attr':
+                        {'placeholder': 'Confirmer votre nouveau mot de passe'}}) }}
                     <center>
                         <button type="submit" class="btn btn-success"> Valider</button>
                     </center>
