--- a/app/Resources/views/emails/reset_password.html.twig
+++ b/app/Resources/views/emails/reset_password.html.twig
@@ -211,17 +211,13 @@
                                         <table cellpadding="0" cellspacing="0" width="100%" bgcolor="#ffffff">
                                             <tr>
                                                 <td valign="top" style="padding-bottom:15px; background-color:#ffffff;">
-                                                    <h1>Bienvenue sur SnowTricks</h1>
+                                                    <h1>SnowTricks</h1>
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td valign="top" style="padding-bottom:20px; background-color:#ffffff;">
-                                                    <b>Bonjour {{ user.username }}, merci pour votre
-                                                        inscription!</b><br>
-                                                    Merci de votre inscription, pour activer votre compte,
-                                                    cliquez sur le bouton "Activer mon compte" .
-
-
+                                                    <b>Bonjour , merci de cliquer sur le bouton
+                                                        afin de réinisialiser votre mot de passe.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -238,8 +234,8 @@
                                                                             stroke="f" fillcolor="#008000">
                                                                         <w:anchorlock/>
                                                                         <center>
-                                                                            <a href="http://127.0.0.1/snowt/SnowTricks/web/app_dev.php/activation/{{ user.token }}"
-                                                                               style="background-color:#008000;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;">Activer mon compte</a>
+                                                                            <a href="http://127.0.0.1/SnowTricks/web/app_dev.php/reset_password/{{ user.token }}"
+                                                                               style="background-color:#008000;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;">Réinisialiser</a>
                                                                             <!--[if mso]>
                                                                             </center>
                                                                             </v:rect>
@@ -264,7 +260,7 @@
                                 </tr>
                                 <tr>
                                     <td valign="top" class="footer-cell">
-                                        Snowtricks<br>
+                                        <br>
                                     </td>
                                 </tr>
                             </table>
