--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -3,6 +3,7 @@
     {{ parent() }}
 {% endblock %}
 {% block header %}
+    {% include 'includes/header.html.twig' %}
 {% endblock %}
 {% block body %}
     <!DOCTYPE html>
